Issue #69 - tab strip collapse

--- a/manager/templates/a11y/sass/index.scss
+++ b/manager/templates/a11y/sass/index.scss
@@ -53,6 +53,8 @@ body *:focus {@extend %a11y-outline;}
 #modx-header *:focus, #modx-leftbar *:focus, #modx-leftbar a:focus, .x-panel-body *:focus, -webkit-tap-highlight-color, .x-btn-focus:focus 
 {@extend %a11y-outline;}
 
+.hide{display:none;}
+
 body, body.x-border-layout-ct {
   color: $mainText;
   //font:  $baseText;
